8152538: UL doesn't inline the LogTagSet::is_level check

Reviewed-by: mlarsson, brutisso